--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
+    "react-checkbox-tree": "^1.8.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "react-scripts": "^5.0.1",
